autopilot — Minor changes in KafkaStreams Health indicator